# custom_gstreamer_plugin

Resizing_Plugin/: CMakeLists.txt
